--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -22,6 +22,8 @@
     margin: 0;
     padding: 0%;
     text-decoration: none;
+    overflow-x: hidden !important;
+
 }
 html,body{
   overflow-x: hidden !important;
